# Neural-Network-From-Scratch

./: CMakeLists.txt  README.md
include/: ActivationFunctions.h  DenseLayer.h  Layer.h  LossFunction.h  MNISTLoader.h  Matrix.h  NeuralNetwork.h  Optimizer.h
src/: ActivationFunctions.cpp  DenseLayer.cpp  LossFunction.cpp  MNISTLoader.cpp  Matrix.cpp  NeuralNetwork.cpp  Optimizer.cpp  main.cpp
